<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/outline_home_24"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_planner"
        android:enabled="true"
        android:icon="@drawable/outline_calendar_month_24"
        android:title="@string/nav_planner" />

    <item
        android:id="@+id/nav_saved"
        android:enabled="true"
        android:icon="@drawable/outline_favorite_24"
        android:title="@string/nav_saved" />

    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile" />
</menu>