<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="64dp"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="32dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="8dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/onboarding_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding_page1"
            android:contentDescription=""
            android:clipToOutline="true" />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/title_part1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="28sp"
        android:text="@string/onboarding_page1_title1"
        android:textColor="@color/text_primary"/>
    <TextView
        android:id="@+id/title_part2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="28sp"
        android:text="@string/onboarding_page_1_title2"
        android:textColor="@color/primary"/>

    <TextView
        android:id="@+id/onboarding_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/plus_jakarta_sans"
        android:maxLines="2"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_page_1_description"
        android:textColor="@color/text_tertiary"/>


</LinearLayout>