<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp"
    android:backgroundTint="@color/background">
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:layout_margin="24dp"
        android:contentDescription="@string/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/back_arrow_onboarding"
        android:src="@drawable/arrow_left_"
        android:backgroundTint="@color/transparent"
        app:tint="@color/text_primary"/>

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dotsIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        app:dotsColor="@color/text_tertiary"
        app:dotsCornerRadius="8dp"
        app:dotsSize="16dp"
        app:dotsSpacing="12dp"
        app:selectedDotColor="@color/primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/Widget.Material3.Button"
        app:cornerRadius="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:icon="@drawable/next_arrow"
        app:iconTint="@color/black"
        app:iconGravity="textEnd"
        app:iconPadding="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:fontFamily="@font/plus_jakarta_sans_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"/>

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="32dp"
        android:text="@string/skip"
        android:fontFamily="@font/plus_jakarta_sans"
        android:textColor="@color/text_tertiary"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>